switching from SSH to HTTPS with password with SED I am so sorry everyone

--- a/package.json
+++ b/package.json
@@ -8,11 +8,11 @@
     "stage": "react-static build --staging",
     "build": "react-static build",
     "serve": "serve dist -p 3000",
-    "preinstall": "echo $NETLIFY_BUILD_BASE; if [ -z ${NETLIFY_BUILD_BASE+x} ]; then echo \"Not on Netlify, skipping.\"; else sed -i.bak 's/git@github\\.com/git:'$GITHUB_ACCESS_TOKEN'@github.com/' package.json && cat package.json; fi"
+    "preinstall": "echo $NETLIFY_BUILD_BASE; if [ -z ${NETLIFY_BUILD_BASE+x} ]; then echo \"Not on Netlify, skipping.\"; else sed -i.bak 's/git\\+ssh:\\/\\/git@/https:\\/\\/git:'$GITHUB_ACCESS_TOKEN'@/' package.json && diff package.json package.json.bak; fi"
   },
   "dependencies": {
     "axios": "^0.16.2",
-    "linc-front-end": "git+ssh://git@github.com:bitgenics/linc-front-end.git",
+    "linc-front-end": "git+ssh://git@github.com:bitgenics/linc-front-end.git#homepage-dev",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
     "react-router": "^4.2.0",
