no escape needed on gnu sed

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "stage": "react-static build --staging",
     "build": "react-static build",
     "serve": "serve dist -p 3000",
-    "preinstall": "echo $NETLIFY_BUILD_BASE; if [ -z ${NETLIFY_BUILD_BASE+x} ]; then echo \"Not on Netlify, skipping.\"; else sed -i.bak 's/git\\+ssh:\\/\\/git@/https:\\/\\/git:'$GITHUB_ACCESS_TOKEN'@/' package.json && diff package.json package.json.bak; fi"
+    "preinstall": "echo $NETLIFY_BUILD_BASE; if [ -z ${NETLIFY_BUILD_BASE+x} ]; then echo \"Not on Netlify, skipping.\"; else sed -i.bak 's/git+ssh:\\/\\/git@/https:\\/\\/git:'$GITHUB_ACCESS_TOKEN'@/' package.json && diff package.json package.json.bak; fi"
   },
   "dependencies": {
     "axios": "^0.16.2",
